tests/neg/semantic_sizeof_void.baa
// EXPECT: لا يمكن حساب 'حجم'
صحيح الرئيسية() {
    صحيح ن = حجم(عدم).
    إرجع ن.
}
